--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{"/" | relative_url }}">Suevo-Guestphalia</a>
+          <a class="nav-link" href="{{"/" | relative_url }}">Ahnentafel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="http://suevo-guestphalia.de">Website</a>
